# PhotoPurge

./: .editorconfig  .env.example  .gitignore  .lefthook.yml  AGENTS.md  DECISIONS.md  Makefile  PHASE1B_REPORT.md  README.md  RISK_REGISTER.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: ci.yml  cleanup-runs.yml  codeql.yml
apps/api/: .coverage  coverage.xml  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/engine/: __init__.py  candidates.py  downloads.py  grouping.py  hashing.py  models.py  normalizer.py  scan.py  schemas.py
apps/api/tests/: test_core_engine.py  test_downloads.py  test_hashing.py  test_health.py  test_normalizer.py  test_scan.py
apps/web/: .prettierignore  Dockerfile  eslint.config.mjs  next.config.js  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/health/: page.tsx
apps/web/tests/: health.test.tsx  home.test.tsx
apps/worker/: .coverage  coverage.xml  pyproject.toml
apps/worker/app/: celery_app.py  tasks.py
apps/worker/tests/: test_tasks.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PRIVACY_NOTICE_DRAFT.md  TERMS_OF_USE_DRAFT.md
experiments/phase1/: README.md
experiments/phase1/src/: auth.js  google-photos.js  scan.js
experiments/phase1b/: .gitignore  README.md
experiments/phase1b/src/: args.js  auth.js  http.js  metadata.js  picker-api.js  picker.js  run-artifacts.js  similarity.js  tier-config.js  url-probe.js  url-recheck.js
experiments/phase1b/tests/: args.test.js  run-artifacts.test.js
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
scripts/: check-coverage.mjs  check-docs.js
tools/phase1b-report/: cli.js  report.js
tools/phase1b-report/tests/: report.test.js
