[project]
name = "photoprune-worker"
version = "0.0.0"
description = "PhotoPrune Celery worker skeleton"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "redis>=5.0.8",
    "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
    "ruff==0.14.13",
    "black==24.10.0",
    "mypy==1.19.1",
    "pytest==8.4.2",
    "pytest-cov==5.0.0",
    "pip-audit==2.10.0",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=xml --cov-report=term"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
